[package]
name = "reth-mitosis-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

# Reth dependencies
reth-ethereum = { workspace = true, features = ["evm", "node-api", "node"] }
reth-chainspec.workspace = true
reth-mitosis-primitives = { path = "../primitives" }
reth-evm.workspace = true
reth-primitives-traits.workspace = true
reth-execution-types.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives.workspace = true
reth-storage-api.workspace = true
reth-storage-errors.workspace = true
reth-trie.workspace = true
reth-rpc-server-types.workspace = true

# Revm
revm = { workspace = true, features = ["serde"] }

# Async
eyre.workspace = true

[dev-dependencies]

[lints]
workspace = true